[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Theme/theme_default.tres" type="Theme" id=1]
[ext_resource path="res://src/UI/TitleScreen/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/background.png" type="Texture" id=3]
[ext_resource path="res://src/Levels/Level1.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sfx/DM-CGS-41.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -241, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -241, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SelectSound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SelectSound:stream:loop_mode")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SelectSound:stream")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 5 ) ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
new_game = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 71.0
margin_top = 43.0
margin_right = 168.0
margin_bottom = 117.0

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 97.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "one-hit"
align = 1

[node name="NewGame" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 97.0
margin_bottom = 46.0
text = "New game"

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 97.0
margin_bottom = 74.0
text = "Exit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -241.0
margin_right = -1.0
margin_bottom = 160.0
color = Color( 0, 0, 0, 1 )

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Sfx"

[connection signal="pressed" from="CenterContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
